# JXQY-all-in-one

android/app/src/main/: AndroidManifest.xml
tool/excel2ini/: excel2ini.py  goods.xlsx  npc.xlsx
tool/hot_update/: CMakeLists.txt  build.sh  hot_update.cpp  hot_update.ini  iniReader.h
tool/verify_file/: verify_file.cpp
